js/js.translator/testData/incremental/invalidation/class/lib1/l1.1_simple_class.kt
class Demo(val x: Int) {
}
